--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "prisma": "prisma"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
+    "express-jwt": "^5.3.1",
+    "graphql-shield": "^2.2.6",
     "graphql-yoga": "1.14.12",
+    "jwks-rsa": "^1.3.0",
     "prisma-binding": "2.1.0"
   },
   "devDependencies": {
